--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@monaco-editor/react": "^4.6.0",
     "@sqlite.org/sqlite-wasm": "^3.47.0-build1",
     "@tailwindcss/typography": "^0.5.15",
-    "brotli-dec-wasm": "^2.3.0",
+    "jotai": "^2.11.0",
     "lodash": "^4.17.21",
     "monaco-editor": "^0.52.0",
     "next": "latest",
@@ -29,6 +29,7 @@
     "daisyui": "^4.12.14",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "wrangler": "^3.95.0"
   }
 }
